1.1.11 webank bdpclient (#142)
* 1. refactored linkis-cli

* 1. added errorCode and errorDesc

* 1. added errorCode and errorDesc

* 1. added errorCode and errorDesc

* 1. modified creators

* 1. fixed bugs

---------

Co-authored-by: shangda <nokia033330@live.com>