@@ -1407,9 +1407,9 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
-              <argLine>--add-opens java.base/java.util=ALL-UNNAMED
-                --add-opens java.base/java.nio=ALL-UNNAMED
-                --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+              <!--              <argLine>&#45;&#45;add-opens java.base/java.util=ALL-UNNAMED-->
+              <!--                &#45;&#45;add-opens java.base/java.nio=ALL-UNNAMED-->
+              <!--                &#45;&#45;add-opens java.base/java.lang=ALL-UNNAMED</argLine>-->
             </configuration>
           </plugin>
         </plugins>
